--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>azizsanpui07.github.io/azizsanpui.github.io</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
