--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
    		<div class="col-twelve">
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
+            <form name="contactForm" id="contactForm" method="post" action="https://formspree.io/f/myyvgdaq">
       			<fieldset>
 
                   <div class="form-field">
