--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="author" content="TemplateMo">
 
         <title>Aziz Sanpui</title>
-        <link rel="icon" type="image/x-icon" href="./images/happy-bearded-young-man.png">
+        <link rel="shortcut icon" type="image/jpg" href="images/happy-bearded-young-man.png"/>
+
 
 
         <!-- CSS FILES -->
